--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>vue2.0</title>
+    <style type="text/css">
+    	
+		* {
+			margin: 0;
+			padding: 0;
+		}
+		body {
+			background-color: #eee;
+		}
+		ul {
+			list-style: none;
+		}
+		h1 {
+			font-size: 1em;
+		}
+
+    </style>
   </head>
   <body>
     <div id="app"></div>
